[package]
name = "rkt"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
csv = "1.4.0"
fs2 = "0.4.3"
home = "0.5.12"
prettytable-rs = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
whoami = "2.1.2"
